--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,59 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+ul, h1, h2, h3, h4, h5, h6, p, li {
+  padding: 0;
+  margin: 0;
+}
+
+button {
+  border: none;
+}
+
+body {
+  background-color: #d35e08;
+  font-size: 16px;
+}
+
+.content {
+  width: 1300px;
+  margin: auto;
+  margin-top: 100px;
+}
+
+.content .headerMain {
+  text-align: center;
+  font-family: "Pacifico", cursive;
+  font-size: 100px;
+  color: #6c2c00;
+  text-transform: uppercase;
+}
+
+.content .headerMainTop {
+  text-align: center;
+  font-family: "Russo One", sans-serif;
+  font-size: 80px;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.content .buttonStartGame {
+  width: 500px;
+  height: 150px;
+  margin-top: 100px;
+  margin-left: 400px;
+  border-radius: 5px;
+  background-color: #f7a621;
+  font-size: 80px;
+  font-family: "Russo One", sans-serif;
+  color: #ffffff;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.content .buttonStartGame:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.content .contentMenu {
+  display: none;
+}
+/*# sourceMappingURL=style.css.map */
