--- a/src/style.css
+++ b/src/style.css
@@ -3,13 +3,27 @@ ul, h1, h2, h3, h4, h5, h6, p, li {
   margin: 0;
 }
 
+ul {
+  list-style: none;
+}
+
 button {
   border: none;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: "Russo One", sans-serif;
+  text-transform: uppercase;
+  background-color: #f7a621;
+}
+
+button:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 body {
   background-color: #d35e08;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .content {
@@ -32,6 +46,7 @@ body {
   font-size: 80px;
   color: #ffffff;
   text-transform: uppercase;
+  letter-spacing: 5px;
 }
 
 .content .buttonStartGame {
@@ -40,20 +55,108 @@ body {
   margin-top: 100px;
   margin-left: 400px;
   border-radius: 5px;
-  background-color: #f7a621;
   font-size: 80px;
-  font-family: "Russo One", sans-serif;
-  color: #ffffff;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-
-.content .buttonStartGame:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
 }
 
 .content .contentMenu {
+  display: none;
+  width: 500px;
+  margin: auto;
+  margin-top: 100px;
+}
+
+.content .contentMenu .headerTheme {
+  color: #6c2c00;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Pacifico", cursive;
+  font-size: 50px;
+}
+
+.content .contentMenu .buttonMenu {
+  width: 100%;
+  height: 50px;
+  margin-top: 5px;
+}
+
+.content .questionsPlace .headerLevel {
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 40px;
+  font-family: "Russo One", sans-serif;
+  margin-bottom: 10px;
+  display: none;
+}
+
+.content .questionsPlace .numberQuestion {
+  text-transform: uppercase;
+  color: #ffffff;
+  font-family: "Russo One", sans-serif;
+  padding: 5px;
+}
+
+.content .questionsPlace .question {
+  color: #944900;
+  font-family: "Pacifico", cursive;
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.content .questionsPlace label {
+  float: left;
+  position: relative;
+  left: 130px;
+  color: #944900;
+  font-family: "Russo One", sans-serif;
+  padding: 20px 20px;
+  margin-right: 10px;
+}
+
+.content .questionsPlace label:before {
+  content: "";
+  position: absolute;
+  left: -10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #ffffff;
+}
+
+.content .questionsPlace label:after {
+  content: "";
+  position: absolute;
+  left: -6px;
+  top: 24px;
+  width: 12px;
+  height: 12px;
+  background-color: #944900;
+  border-radius: 50%;
+  display: none;
+}
+
+.content .questionsPlace input[type=radio] {
+  display: none;
+}
+
+.content .questionsPlace input[type=radio]:checked + label:after, .content .questionsPlace input[type=radio]:hover + label:after {
+  display: block;
+}
+
+.content .questionsPlace .buttonNext {
+  width: 200px;
+  height: 50px;
+  margin-left: 550px;
+  margin-top: 50px;
+  display: none;
+}
+
+.content .questionsPlace .themeProg .lightLevel .questionProg {
+  overflow: hidden;
+  width: 750px;
+  margin: auto;
+  background-color: #f7a621;
   display: none;
 }
 /*# sourceMappingURL=style.css.map */
