--- a/src/style.css
+++ b/src/style.css
@@ -103,9 +103,10 @@ body {
 
 .content .questionsPlace .question {
   color: #944900;
-  font-family: "Pacifico", cursive;
+  font-family: "Russo One", sans-serif;
   text-align: center;
-  font-size: 28px;
+  font-size: 24px;
+  padding: 15px;
   margin-bottom: 10px;
 }
 
@@ -114,6 +115,7 @@ body {
   font-family: "Russo One", sans-serif;
   text-align: center;
   font-size: 20px;
+  padding: 15px;
   margin-bottom: 10px;
 }
 
@@ -144,6 +146,22 @@ body {
   font-size: 20px;
 }
 
+.content .questionsPlace .resultPoints {
+  width: 750px;
+  margin: auto;
+  background-color: #f7a621;
+  display: none;
+}
+
+.content .questionsPlace .resultPoints .result {
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 40px;
+  font-family: "Russo One", sans-serif;
+  margin-bottom: 10px;
+}
+
 .content .questionsPlace label {
   float: left;
   position: relative;
@@ -163,9 +181,9 @@ body {
 }
 
 .content .questionsPlace input[type=text] {
-  width: 250px;
-  height: 25px;
-  margin-left: 250px;
+  width: 300px;
+  height: 30px;
+  margin-left: 225px;
   margin-bottom: 20px;
   border: none;
   color: #944900;
@@ -247,6 +265,29 @@ body {
 }
 
 .content .questionsPlace .themeProg .middleLevel label:after, .content .questionsPlace .themeMath .middleLevel label:after, .content .questionsPlace .themeRus .middleLevel label:after, .content .questionsPlace .themeBio .middleLevel label:after, .content .questionsPlace .themeInf .middleLevel label:after {
+  content: "";
+  position: absolute;
+  left: -10px;
+  background: white;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #944900;
+}
+
+.content .questionsPlace .themeProg .hardLevel .questionProg, .content .questionsPlace .themeProg .hardLevel .questionMath, .content .questionsPlace .themeProg .hardLevel .questionRus, .content .questionsPlace .themeProg .hardLevel .questionBio, .content .questionsPlace .themeProg .hardLevel .questionInf, .content .questionsPlace .themeMath .hardLevel .questionProg, .content .questionsPlace .themeMath .hardLevel .questionMath, .content .questionsPlace .themeMath .hardLevel .questionRus, .content .questionsPlace .themeMath .hardLevel .questionBio, .content .questionsPlace .themeMath .hardLevel .questionInf, .content .questionsPlace .themeRus .hardLevel .questionProg, .content .questionsPlace .themeRus .hardLevel .questionMath, .content .questionsPlace .themeRus .hardLevel .questionRus, .content .questionsPlace .themeRus .hardLevel .questionBio, .content .questionsPlace .themeRus .hardLevel .questionInf, .content .questionsPlace .themeBio .hardLevel .questionProg, .content .questionsPlace .themeBio .hardLevel .questionMath, .content .questionsPlace .themeBio .hardLevel .questionRus, .content .questionsPlace .themeBio .hardLevel .questionBio, .content .questionsPlace .themeBio .hardLevel .questionInf, .content .questionsPlace .themeInf .hardLevel .questionProg, .content .questionsPlace .themeInf .hardLevel .questionMath, .content .questionsPlace .themeInf .hardLevel .questionRus, .content .questionsPlace .themeInf .hardLevel .questionBio, .content .questionsPlace .themeInf .hardLevel .questionInf {
+  overflow: hidden;
+  width: 750px;
+  margin: auto;
+  background-color: #f7a621;
+  display: none;
+}
+
+.content .questionsPlace .themeProg .hardLevel label, .content .questionsPlace .themeMath .hardLevel label, .content .questionsPlace .themeRus .hardLevel label, .content .questionsPlace .themeBio .hardLevel label, .content .questionsPlace .themeInf .hardLevel label {
+  margin-right: 30px;
+  left: 40px;
+}
+
+.content .questionsPlace .themeProg .hardLevel label:after, .content .questionsPlace .themeMath .hardLevel label:after, .content .questionsPlace .themeRus .hardLevel label:after, .content .questionsPlace .themeBio .hardLevel label:after, .content .questionsPlace .themeInf .hardLevel label:after {
   content: "";
   position: absolute;
   left: -10px;
