--- a/src/style.css
+++ b/src/style.css
@@ -162,6 +162,30 @@ body {
   margin-bottom: 10px;
 }
 
+.content .questionsPlace .resultPoints .points {
+  text-align: center;
+  color: #944900;
+  text-transform: uppercase;
+  font-size: 40px;
+  font-family: "Russo One", sans-serif;
+  margin-bottom: 10px;
+}
+
+.content .questionsPlace .clock {
+  display: none;
+  width: 100px;
+  margin: auto;
+  position: relative;
+  left: 330px;
+  top: 112px;
+  font-size: 20px;
+  padding-right: 5px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #ffffff;
+  font-family: "Russo One", sans-serif;
+}
+
 .content .questionsPlace label {
   float: left;
   position: relative;
